--- a/src/app.scss
+++ b/src/app.scss
@@ -1,5 +1,5 @@
-@import "node_modules/@devo/applications-builder/styles/all.scss";
-@import "node_modules/@devo/applications-builder/styles/themes/dark/all.scss";
-@import "node_modules/@devo/applications-builder/styles/themes/light/all.scss";
+@import 'node_modules/@devoinc/applications-builder/styles/all.scss';
+@import 'node_modules/@devoinc/applications-builder/styles/themes/dark/all.scss';
+@import 'node_modules/@devoinc/applications-builder/styles/themes/light/all.scss';
 
 // Add here your custom styles
